[project]
name = "copulae"
version = "0.8.0"
authors = [
    { name = "Daniel Bok", email = "daniel.bok@outlook.com" }
]
maintainers = [
    { name = "Daniel Bok", email = "daniel.bok@outlook.com" }
]
description = "Python copulae library for dependency modelling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "typing-extensions (>=4.0.0) ; python_version < \"3.11\"",
    "wrapt (>=1.17.2,<2.0.0)",
    "numba (>=0.61.0,<0.62.0)",
]

keywords = [
    "copula",
    "copulae",
    "dependency modelling",
    "dependence structures",
    "archimdean",
    "elliptical",
    "finance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Documentation = "https://copulae.readthedocs.io/en/latest/"
Code = "https://github.com/DanielBok/copulae"
"Issue tracker" = "https://github.com/DanielBok/copulae/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "numpy", "scipy", "cython", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
pytest = "^8.3.4"
coverage = "^7.6.10"
pytest-cov = "^6.0.0"

[tool.poetry.group.build.dependencies]
setuptools = "^75.8.0"
cython = "^3.0.11"

[tool.poetry.build]
script = "setup.py"
