[metadata]
name = copulae
author = Daniel Bok
author_email = daniel.bok@outlook.com
project_urls =
    Documentation = https://copulae.readthedocs.io/en/latest/
    Code = https://github.com/DanielBok/copulae
    Issue tracker = https://github.com/DanielBok/copulae/issues
license = MIT
maintainer = Daniel Bok
maintainer_email = daniel.bok@outlook.com
description = Python copulae library for dependency modelling
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    copula
    copulae
    dependency modelling
    dependence structures
    archimdean
    elliptical
    finance
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.6
include_package_data = true

[flake8]
max-line-length = 100
ignore =
    E122,
    E123,
    E126,
    E127,
    E128,
    E731,
    E722
exclude =
    .asv
    .git,
    build,
    copulae/_version.py,
    dist,
    docs,
    tests,
    versioneer.py,
    benchmarks,


[tool:pytest]
addopts = --tb=short
          --cov=copulae
          --cov-report=term-missing
          --doctest-modules

filterwarnings =
    ignore::UserWarning
    ignore:inspect.getargspec\(\) is deprecated since Python 3.0:DeprecationWarning
    ignore:Report.file_reporters will no longer be available in Coverage.py 4.2:DeprecationWarning

[coverage:report]
omit =
    */__init__.py
    copulae/_version.py
    copulae/special/_machine.py
    copulae/special/trig.py
    copulae/types.py
